double pendulum with jacobian

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,19 +2,49 @@ cmake_minimum_required(VERSION 3.10)
 project(pendulum_pd C)
 
 set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
 
-# Set MuJoCo path (edit if needed)
-set(MUJOCO_PATH $ENV{MUJOCO_PATH})
 
-include_directories(${MUJOCO_PATH}/include)
-link_directories(${MUJOCO_PATH}/lib)
 
-add_executable(pendulum src/main.c)
 
-target_link_libraries(pendulum
-    mujoco
+set(MUJOCO_DIR ${CMAKE_SOURCE_DIR}/..)
+
+set(MUJOCO_INCLUDE_DIR ${MUJOCO_DIR}/include)
+set(MUJOCO_LIBRARY ${MUJOCO_DIR}/lib/libmujoco.so)
+
+find_package(glfw3 REQUIRED)
+
+
+add_executable(single_pendulum
+    src/main.c
+)
+
+target_include_directories(single_pendulum PRIVATE
+    ${MUJOCO_INCLUDE_DIR}
+)
+
+target_link_libraries(single_pendulum
+    ${MUJOCO_LIBRARY}
     glfw
     GL
     m
+    dl
+)
+
+
+add_executable(double_pendulum
+    src/double_main.c
+)
+
+target_include_directories(double_pendulum PRIVATE
+    ${MUJOCO_INCLUDE_DIR}
+)
+
+target_link_libraries(double_pendulum
+    ${MUJOCO_LIBRARY}
+    glfw
+    GL
+    m
+    dl
 )
 
